--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel='shortcut icon' href="favicon.ico">
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <!--
